--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- General options --- #
 
 # Name of website
-title: 코드 저장소
+title: 영찬's GitBlog
 
 # Short description of your site
 description: 끊임없이 성장하라
