user data update 2

--- a/_config.yml
+++ b/_config.yml
@@ -71,17 +71,16 @@ social-network-links:
   email: "kau_esc@naver.com"
   facebook: profile.php?id=100000498178589
   github: KimYC1223
-  twitter: kimyc1223
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
-#  instagram: deanat78
-#  youtube: user/deanat78
+  instagram: kimyc1223
+  youtube: user/kimyc1223
 #  spotify: yourname
-#  telephone: +14159998888
-#  steam: deanat78
+  telephone: +821093578504
+  steam: kimyc1223
 #  twitch: yourname
 #  yelp: yourname
 
