--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ social-network-links:
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
   instagram: kimyc1223
-  youtube: user/kimyc1223
+  youtube: channel/UCQi-CraYnlNjIKqZYv9gLCQ/videos?view_as=subscriber
 #  spotify: yourname
   telephone: +821093578504
   steam: kimyc1223
