--- a/_data/thesis.yml
+++ b/_data/thesis.yml
@@ -14,7 +14,7 @@
   url : https://drive.google.com/file/d/14jn-jq5DjupU_YZ0ABUYze11DsTlLYzA/view
   org : 전자공학회
   date : 2021.11
-  type : 졸업논문
+  type : 국내 학회
 
 - name : 머리 착용 디스플레이용 고속 화상 채팅 구현
   url : ""
