update life post

--- a/_data/mention.yml
+++ b/_data/mention.yml
@@ -1,4 +1,17 @@
 - writer: KimYC1223
+  date: 2022-03-11 16:14
+  title : 주엽 고등학교 동창회 모임
+  message: 심남지민 그리고 김웁웁이와 함께한 집들이 모임<br>보드게임과 피코파코 게임은 재미있었다...<br>코로나로 함께하지 못한 원빈조를 기리며<br>마지막은 상어가 되어버린 김웁웁이 사진
+  emoji : 🕹️
+  media:
+    - type: photo
+      name: 2022031101
+    - type: photo
+      name: 2022031102
+    - type: photo
+      name: 2022031103
+
+- writer: KimYC1223
   date: 2022-02-25 14:00
   title : 연세대 석사 과정 졸업!
   message: <b>2020.03 - 2022.02 컴퓨터 과학과 석사</b> 졸업했습니다!<br>많이 부족했지만 도움 주신 분들 너무나 감사합니다!
