update life logs

--- a/_data/mention.yml
+++ b/_data/mention.yml
@@ -1,4 +1,138 @@
 - writer: KimYC1223
+  date: 2022-06-25 18:00
+  title : DC Lab 제 1회 홈커밍
+  message: 연세대학교 디펜더블컴퓨팅 랩실에서 주최한 제 1회 홈커밍!<br>졸업한 선배님들과 재학생분들, 교수님과 함께했던 시간...!<br>마지막엔 교수님이 티 세트를 선물로 주셨다!
+  emoji : 🎓
+  media:
+    - type: photo
+      name: 2022062501
+    - type: photo
+      name: 2022062502
+    - type: photo
+      name: 2022062503
+
+- writer: KimYC1223
+  date: 2022-06-12 17:49
+  title : 즐거운 한강 나들이
+  message: 선경이와 함께한 한강 나들이!!!<br>무려 선경이가 아침부터 같이 먹을 도시락을 준비해줬다!<br>조금만 더 늦었으면 더워서 못갈 뻔 했는데, 타이밍이 좋았던 나들이!
+  emoji : ❤️
+  media:
+    - type: photo
+      name: 2022061201
+    - type: photo
+      name: 2022061202
+    - type: photo
+      name: 2022061203
+    - type: photo
+      name: 2022061204
+
+- writer: KimYC1223
+  date: 2022-06-10 02:31
+  title : 제 1회 E.S.C. 보드게임 파티파티
+  message: E.S.C. 멤버들과 함께한 즐거운 보드게임 파티파티<br>시크릿 히틀러, 정오의 손가락 총 대결, 블랙 스토리 등 보드게임을 하며 밤을 세웠다...!<br>보드게임 파티파티 2회를 언제할진 미정!
+  emoji : 👾
+  media:
+    - type: photo
+      name: 2022061001
+    - type: photo
+      name: 2022061002
+
+- writer: KimYC1223
+  date: 2022-06-05 17:49
+  title : 호캉스 with 수영장
+  message: 선경이와 함께 한 동대문 호캉스 투어!<br>처음으로 가본 수영장있는 호텔이었는데, 너무 재밌어서 깜짝놀랐다.<br>다들 사진찍기 바쁜데 우리만 찐으로 놀았던것 같다...ㅎㅎ<br>우육미 스테이크와 된장밥도 기억에 남는다!
+  emoji : 🏨
+  media:
+    - type: photo
+      name: 2022060501
+    - type: photo
+      name: 2022060502
+    - type: photo
+      name: 2022060503
+    - type: photo
+      name: 2022060504
+    - type: photo
+      name: 2022060505
+    - type: photo
+      name: 2022060506
+
+- writer: KimYC1223
+  date: 2022-06-02 20:12
+  title : 제주도 출장
+  message: KETI 조선임님이 스케쥴상 바쁜관계로,<br>제주도의 한국해양과학기술협의회 구두발표를 대리 발표하러 참석하였다!<br>학회 발표 후, 여러가지 예쁜 카페와 음식점을 많이 돌아녀서 재밌었다
+  emoji : 🍊
+  media:
+    - type: photo
+      name: 2022060201
+    - type: photo
+      name: 2022060202
+    - type: photo
+      name: 2022060203
+    - type: photo
+      name: 2022060204
+    - type: photo
+      name: 2022060205
+    - type: photo
+      name: 2022060207
+
+- writer: KimYC1223
+  date: 2022-05-28 14:20
+  title : 성우주 결혼식
+  message: 08 성우형님과 14 우주의 결혼식을 다녀왔다!<br>이 결혼식은 나의 결혼식 사회 데뷔 무대이기도 했는데,<br>많이 떨려서 실수도 많이 했던것 같아 아쉬운 감이 없지않아 있다..ㅠㅜ<br>아름다운 성우주 커플 항상 행복하고 잘 살았으면 좋겠다!
+  emoji : ❤️
+  media:
+    - type: photo
+      name: 2022052801
+    - type: photo
+      name: 2022052802
+    - type: photo
+      name: 2022052803
+    - type: photo
+      name: 2022052804
+
+- writer: KimYC1223
+  date: 2022-05-26 15:30
+  title : 한국정보통신학회 부산 출장
+  message: KETI 후배 경태의 첫 학회 참가<br>부산에서 열린 학국정보통신학회 춘계 종합 학술대회에 참석했다!<br>금수저 경태와 함께한 즐거운 시간
+  emoji : 🏖
+  media:
+    - type: photo
+      name: 2022052601
+    - type: photo
+      name: 2022052602
+    - type: photo
+      name: 2022052603
+    - type: photo
+      name: 2022052604
+    - type: photo
+      name: 2022052605
+
+- writer: KimYC1223
+  date: 2022-04-02 12:14
+  title : 대전 나들이
+  message: 석준, 경모, 유석이와 함께 떠난 E.S.C.배 대전 여행하기<br>맛있는것도 많이 먹고, 좋은 사진들도 많이 구했다!<br>마무리는 역시 성심당으로....
+  emoji : 🚗
+  media:
+    - type: photo
+      name: 2022040201
+    - type: photo
+      name: 2022040202
+    - type: photo
+      name: 2022040204
+    - type: photo
+      name: 2022040205
+    - type: photo
+      name: 2022040206
+    - type: photo
+      name: 2022040207
+    - type: photo
+      name: 2022040208
+    - type: photo
+      name: 2022040209
+    - type: photo
+      name: 2022040210
+
+- writer: KimYC1223
   date: 2022-03-11 16:14
   title : 주엽 고등학교 동창회 모임
   message: 심남지민 그리고 김웁웁이와 함께한 집들이 모임<br>보드게임과 피코파코 게임은 재미있었다...<br>코로나로 함께하지 못한 원빈조를 기리며<br>마지막은 상어가 되어버린 김웁웁이 사진
