--- a/_data/thesis.yml
+++ b/_data/thesis.yml
@@ -1,3 +1,15 @@
+- name : Graphic techniques of heat vision for solar panel using shader
+  url : ""
+  org : IEEECS2022
+  date : 2022.07
+  type : 국제 학회
+
+- name : 이미지 딥러닝 적용 High-Polygon Mesh 생성기법에 관한 연구
+  url : ""
+  org : 한국인터넷정보학회
+  date : 2022.04
+  type : 국내 학회
+
 - name : Self-tracking solution for fluid intake and urination activity in children with daytime urinary frequency syndrome
   url : ""
   org : 연세대학교
