--- a/_data/main_project_detail.yml
+++ b/_data/main_project_detail.yml
@@ -1,4 +1,5 @@
 - name : 혼합 현실 협업 솔루션
+  index : 1
   img : ./img/mp_01.png
   url : /project/
   desc : Mixed Reality 기반 산업용 협업 지원 시스템 핵심 기술 개발
@@ -10,6 +11,7 @@
     - Holo Lens
 
 - name : 스마트 발전소 D.T.
+  index : 2
   img : ./img/mp_02.png
   url : /project/
   desc : 새만금 재생 에너지 발전소 관리를 위한 디지털 트윈 개발
@@ -21,6 +23,7 @@
     - WegGL
 
 - name : Smart Deployment
+  index : 3
   img : ./img/mp_03.png
   url : /project/
   desc : CAD 데이터를 통한 강화학습 공사 시뮬레이터
@@ -31,6 +34,7 @@
     - '3D Mesh'
 
 - name : Path Generator
+  index : 4
   img : ./img/mp_04.gif
   url : /project/
   desc : '3D공간을 등속력으로 움직 일 수 있는 라이브러리 구현'
@@ -41,6 +45,7 @@
     - Open Source
 
 - name : Flow Visualizer
+  index : 5
   img : ./img/mp_05.gif
   url : /project/
   desc : 유체나 물류의 흐름(양/속력/방향)을 한 눈에 파악할 수 있도록 만드는 라이브러리 구현
@@ -52,6 +57,7 @@
     - Visualizer
 
 - name : BlackIce 시뮬레이터
+  index : 6
   img : ./img/mp_06.png
   url : /project/
   desc : 기상서버 데이터 기반 블랙 아이스 시뮬레이터 개발
