--- a/_data/other_project.yml
+++ b/_data/other_project.yml
@@ -43,6 +43,7 @@
     - Javascript
     - SQL
   platform :
+    - NodeJS
     - Web
   git-name : "Git repository"
   git-url : https://github.com/KimYC1223/Public-Institutions-AD-Web
@@ -67,6 +68,7 @@
     - Javascript
     - Go
   platform :
+    - Hyperledger
     - Ubuntu Mate
     - docker
     - AngularJS
@@ -93,11 +95,10 @@
   img : ./img/other_p_4.png
   short-desc : 뉴로모픽 칩을 이용한 KNN-기반 얼굴 인식 모듈 개발
   language :
-    - Javascript
-    - 'C#'
-    - SQL
+    - C
   platform :
-    - Ubuntu
+    - Nueromorphic
+    - RaspberryPI
   git-name : ""
   git-url : ""
   long-desc : 전통적인 얼굴 검출 알고리즘인 HAAR-Cascade 알고리즘을 서울과학기술대학교에서 제작한 뉴로모픽 칩을 이용하여 가속함. 기존 알고리즘의 Threshold 비교 과정을 KNN 매칭으로 구현하여 처리하였으며, 기존 방법 대비 계산 속도는 27.81%, 프로그램의 CPU 점유율은 34.19% 향상시킴.
@@ -108,11 +109,10 @@
   img : ./img/other_p_3.png
   short-desc : 저전력 라즈베리파이 환경에서 동작하는 PCB 기판 검사기 구현
   language :
-    - Javascript
-    - 'C#'
-    - SQL
+    - Python
   platform :
-    - Raspbian
+    - IntelCurie
+    - RaspberryPI
   git-name : ""
   git-url : ""
   long-desc : 기존 PCB 기판의 SMT 검사중 하나인 AOI 검사(오삽, 미삽, 미납, 소납, 과납, 마킹, 쇼트, 크랙, 역삽 등)과정 소요 시간을 기판당 평균 0.7초에서 0.5초로 단축함. 라즈베리파이 3 B+ 하드웨어에 병렬 연산 가속기인 Intel Curie칩을 확장하고 SPI로 통신하여 전체적인 연산 속도를 향상시킴.
