--- a/_data/main_project_detail.yml
+++ b/_data/main_project_detail.yml
@@ -1,7 +1,7 @@
 - name : 혼합 현실 협업 솔루션
   index : 1
   img : ./img/mp_01.png
-  url : /project/
+  url : /profile/
   desc : Mixed Reality 기반 산업용 협업 지원 시스템 핵심 기술 개발
   task :
     - HoloLens용 사용자 인터페이스 직접 구현
@@ -13,7 +13,7 @@
 - name : 스마트 발전소 D.T.
   index : 2
   img : ./img/mp_02.png
-  url : /project/
+  url : /profile/
   desc : 새만금 재생 에너지 발전소 관리를 위한 디지털 트윈 개발
   task :
     - WebGL 환경에서 Web-Unity간 상호작용 직접 구현
@@ -25,7 +25,7 @@
 - name : Smart Deployment
   index : 3
   img : ./img/mp_03.png
-  url : /project/
+  url : /profile/
   desc : CAD 데이터를 통한 강화학습 공사 시뮬레이터
   task :
     - 런타임 Programmable/Editable mesh 생성 기능 직접 구현
@@ -36,7 +36,7 @@
 - name : Path Generator
   index : 4
   img : ./img/mp_04.gif
-  url : /project/
+  url : /profile/
   desc : '3D공간을 등속력으로 움직 일 수 있는 라이브러리 구현'
   task :
     - Bezier Curve를 응용한 자연스러운 커브 및 불규칙한 움직임 구현
@@ -47,7 +47,7 @@
 - name : Flow Visualizer
   index : 5
   img : ./img/mp_05.gif
-  url : /project/
+  url : /profile/
   desc : 유체나 물류의 흐름(양/속력/방향)을 한 눈에 파악할 수 있도록 만드는 라이브러리 구현
   task :
     - Unity Custom Editor 및 GUI Editor 작업
@@ -59,7 +59,7 @@
 - name : BlackIce 시뮬레이터
   index : 6
   img : ./img/mp_06.png
-  url : /project/
+  url : /profile/
   desc : 기상서버 데이터 기반 블랙 아이스 시뮬레이터 개발
   task :
     - 서버의 기상 로그를 받아오는 통신 기능 구현
