update life style post

--- a/_data/career.yml
+++ b/_data/career.yml
@@ -1,3 +1,7 @@
-- period : 2018.09 ~ 현재
+- period : 2018.09 ~ 2022.12
   com : KETI 에너지IT융합연구센터
   position : 연구원
+
+- period : 2022.12 ~ 현재
+  com : NHN 게임플랫폼클라팀 Unity Engine 파트
+  position : 전임
