--- a/_data/career.yml
+++ b/_data/career.yml
@@ -1,3 +1,6 @@
-- period: 2021.03 ~ 현재
+- period: 2021.03 ~ 2023.06
   com: 단국대학교 모바일시스템공학과 C&I Lab
   position: 학부연구원
+- period: 2023.06 ~ 현재
+  com: KAIST Geometric AI Lab
+  position: 인턴
